# CodeReviewAI

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: github_integration.py  gpt_integration.py  main.py
app/models/: review.py
app/routers/: review.py
tests/: test_code_review.py
